* Bug #34243: add possibility to translate messages before the initial SET locale command was triggered.
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51698 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console/debian/changelog
+++ b/management/univention-management-console/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console (6.0.24-18) unstable; urgency=low
+
+  * Bug #34243: add possibility to translate messages before the initial SET
+  	locale command was triggered.
+
+ -- Florian Best <best@univention.de>  Thu, 10 Jul 2014 14:25:00 +0200
+
 univention-management-console (6.0.24-17) unstable; urgency=low
 
   * Bug #34243: enhance error handling to display user friendly error messages
