--- a/services/univention-pkgdb/debian/changelog
+++ b/services/univention-pkgdb/debian/changelog
@@ -1,3 +1,9 @@
+univention-pkgdb (8.0.0-1) unstable; urgency=low
+
+  * Update to UCS 4.0 (Bug #35147)
+
+ -- Felix Botner <botner@univention.de>  Thu, 10 Jul 2014 15:56:50 +0200
+
 univention-pkgdb (7.0.11-5) unstable; urgency=low
 
   * give user friendly feedback whenever a command execution fails because the
