--- a/services/univention-postgresql/debian/changelog
+++ b/services/univention-postgresql/debian/changelog
@@ -1,3 +1,9 @@
+univention-postgresql (7.0.0-1) unstable; urgency=low
+
+  * Update to UCS 4.0 (Bug #35147) 
+
+ -- Felix Botner <botner@univention.de>  Thu, 10 Jul 2014 15:59:19 +0200
+
 univention-postgresql (6.0.1-4) unstable; urgency=low
 
   * Update/review UCR variable descriptions (Bug #30948)
