--- a/services/univention-printserver/debian/changelog
+++ b/services/univention-printserver/debian/changelog
@@ -1,3 +1,9 @@
+univention-printserver (8.0.0-1) unstable; urgency=low
+
+  * Update to UCS 4.0 (Bug #35147)  
+
+ -- Felix Botner <botner@univention.de>  Thu, 10 Jul 2014 16:05:51 +0200
+
 univention-printserver (7.0.11-1) unstable; urgency=low
 
   * revised UMC module description (Bug #32022)
