--- a/services/univention-pkgdb/debian/changelog
+++ b/services/univention-pkgdb/debian/changelog
@@ -1,3 +1,9 @@
+univention-pkgdb (8.0.0-2) unstable; urgency=low
+
+  * added dh $@ --with 'python_support' (Bug #35147) 
+
+ -- Felix Botner <botner@univention.de>  Thu, 10 Jul 2014 16:08:07 +0200
+
 univention-pkgdb (8.0.0-1) unstable; urgency=low
 
   * Update to UCS 4.0 (Bug #35147)
