--- a/management/univention-management-console-module-adtakeover/debian/changelog
+++ b/management/univention-management-console-module-adtakeover/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-adtakeover (1.0.10-26) unstable; urgency=medium
+
+  * Move fix_gpo_container_names code to fix_sysvol_acls (Bug #34776)
+
+ -- Arvid Requate <requate@univention.de>  Thu, 10 Jul 2014 16:58:12 +0200
+
 univention-management-console-module-adtakeover (1.0.10-25) unstable; urgency=medium
 
   * Translate another message (Bug #34139)
