* Bug #34243: also reload translation gettext instance when reloading modules
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51706 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console/debian/changelog
+++ b/management/univention-management-console/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console (6.0.24-19) unstable; urgency=low
+
+  * Bug #34243: also reload translation gettext instance when reloading
+  	modules
+
+ -- Florian Best <best@univention.de>  Thu, 10 Jul 2014 17:19:38 +0200
+
 univention-management-console (6.0.24-18) unstable; urgency=low
 
   * Bug #34243: add possibility to translate messages before the initial SET
