Bug #35145: Start UCS 4.0 development
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51716 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-ipchange/debian/changelog
+++ b/management/univention-management-console-module-ipchange/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-ipchange (3.0.0-1) unstable; urgency=low
+
+  * Bug #35145: Start UCS 4.0 development
+
+ -- Florian Best <best@univention.de>  Thu, 10 Jul 2014 17:45:26 +0200
+
 univention-management-console-module-ipchange (2.0.5-1) unstable; urgency=low
 
   * Bug #32048: Add keywords to UMC module definition
