--- a/management/univention-management-console-module-mrtg/debian/changelog
+++ b/management/univention-management-console-module-mrtg/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-mrtg (3.0.0-1) unstable; urgency=low
+
+  * Bug #35145: Start UCS 4.0 development
+
+ -- Florian Best <best@univention.de>  Thu, 10 Jul 2014 17:45:47 +0200
+
 univention-management-console-module-mrtg (2.0.6-1) unstable; urgency=low
 
   * revised UMD moculde description (Bug #32022)
