* Bug #34243: fix typos in translation
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51722 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console/debian/changelog
+++ b/management/univention-management-console/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console (6.0.24-20) unstable; urgency=low
+
+  * Bug #34243: fix typos in translation
+
+ -- Florian Best <best@univention.de>  Fri, 11 Jul 2014 10:35:06 +0200
+
 univention-management-console (6.0.24-19) unstable; urgency=low
 
   * Bug #34243: also reload translation gettext instance when reloading
