* Bug #34244: fix typos in translation
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51725 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-udm/umc/python/udm/de.po
+++ b/management/univention-management-console-module-udm/umc/python/udm/de.po
@@ -134,7 +134,7 @@ msgstr "Referenzierende Objekte"
 #: umc/python/udm/udm_ldap.py:113 umc/python/udm/udm_ldap.py:115
 msgid ""
 "Restart the LDAP service either via \"invoke-rc.d slapd restart\" on command "
-"line or with the UMC module \"system services\""
+"line or with the UMC module \"System services\""
 msgstr ""
 "Starten Sie den LDAP-Dienst entweder über \"invoke-rc.d "
 "slapd restart\" per Kommandozeile oder mit dem UMC Modul \"Systemdienste\" neu."
