--- a/virtualization/univention-xen-gplpv/debian/changelog
+++ b/virtualization/univention-xen-gplpv/debian/changelog
@@ -1,3 +1,9 @@
+univention-xen-gplpv (1:1.0.1092-3) unstable; urgency=low
+
+  * fixed postinst (Bug #35167) 
+
+ -- Felix Botner <botner@univention.de>  Fri, 11 Jul 2014 13:19:08 +0200
+
 univention-xen-gplpv (1:1.0.1092-2) unstable; urgency=low
 
   * fixed version string in iso name (Bug #35167) 
