* Bug #34244: fix typos in translation
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51742 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-udm/umc/python/udm/de.po
+++ b/management/univention-management-console-module-udm/umc/python/udm/de.po
@@ -86,7 +86,7 @@ msgstr ""
 msgid "Make sure the domaincontroller master is running and reachable from %s"
 msgstr ""
 "Stellen Sie sicher, dass der Domänencontroller Master läuft und von %s "
-"erreichbar ist."
+"erreichbar ist"
 
 #: umc/python/udm/tools.py:68
 msgid "More than one object has been found."
