* Bug #34244: fix typos in translation
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51746 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-udm/umc/python/udm/de.po
+++ b/management/univention-management-console-module-udm/umc/python/udm/de.po
@@ -85,7 +85,7 @@ msgstr ""
 #, python-format
 msgid "Make sure the domaincontroller master is running and reachable from %s"
 msgstr ""
-"Stellen Sie sicher, dass der Domänencontroller Master läuft und von %s "
+"Stellen Sie sicher, dass der Domänencontroller Master läuft und von %s aus "
 "erreichbar ist"
 
 #: umc/python/udm/tools.py:68
