--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,3 +1,36 @@
+univention-ldap (10.0.17-39) unstable; urgency=low
+
+  * Fixed typo in control file (Bug #35093)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 02 Jul 2014 08:57:24 +0200
+
+univention-ldap (10.0.17-38) unstable; urgency=low
+
+  * Depend on the current slapd version (Bug #35093)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 02 Jul 2014 08:54:05 +0200
+
+univention-ldap (10.0.17-37) unstable; urgency=low
+
+  * UCS in AD domain update (Bug #35093)
+    [ Arvid Requate ]
+     * Support pwd_scheme_kinit (Bug #34091)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 02 Jul 2014 08:41:42 +0200
+
+univention-ldap (10.0.17-36) unstable; urgency=low
+
+  * New share-userquota binary attribute:
+    Reapply quota on every login (Bug #33174)
+
+ -- Erik Damrose <damrose@univention.de>  Thu, 26 Jun 2014 11:59:47 +0200
+
+univention-ldap (10.0.17-35) unstable; urgency=low
+
+  * Fix subtree scope of ACL for cn=computers (Bug #34554)  
+
+ -- Felix Botner <botner@univention.de>  Tue, 17 Jun 2014 17:26:07 +0200
+
 univention-ldap (10.0.17-34) unstable; urgency=low
 
   * Add entryUUID to LDAP index (Bug #34815)
