--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,3 +1,9 @@
+univention-ldap (11.0.0-1) unstable; urgency=low
+
+  * Update to UCS 4.0 (Bug #35143) 
+
+ -- Felix Botner <botner@univention.de>  Fri, 11 Jul 2014 14:25:59 +0200
+
 univention-ldap (10.0.17-39) unstable; urgency=low
 
   * Fixed typo in control file (Bug #35093)
