--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,10 @@
+univention-s4-connector (8.0.33-51) unstable; urgency=low
+
+  * Fixed python syntax error from last commit (Bug #32194)
+  * Updated copyright
+
+ -- Stefan Gohmann <gohmann@univention.de>  Fri, 11 Jul 2014 20:37:41 +0200
+
 univention-s4-connector (8.0.33-50) unstable; urgency=low
 
   * Added new helper tools:
