* More AD member updates (Bug #35091):     Install univention-samba     Stop heimdal and samba4
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51758 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,11 @@
+univention-ad-connector (8.0.17-13) unstable; urgency=low
+
+  * More AD member updates (Bug #35091):
+      Install univention-samba
+      Stop heimdal and samba4
+
+ -- Stefan Gohmann <gohmann@univention.de>  Mon, 14 Jul 2014 08:16:15 +0200
+
 univention-ad-connector (8.0.17-12) unstable; urgency=low
 
   * Make a secure LDAP connection possible without having the root
