* Check SSL/TLS settings (Bug #35091)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51759 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-ad-connector (8.0.17-14) unstable; urgency=low
+
+  * Check SSL/TLS settings (Bug #35091)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Mon, 14 Jul 2014 09:18:23 +0200
+
 univention-ad-connector (8.0.17-13) unstable; urgency=low
 
   * More AD member updates (Bug #35091):
