--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,43 @@
+univention-management-console-frontend (3.0.152-38) unstable; urgency=low
+
+  * Bug #34243: only show reload-UMC message once
+
+ -- Florian Best <best@univention.de>  Wed, 09 Jul 2014 08:41:56 +0200
+
+univention-management-console-frontend (3.0.152-37) unstable; urgency=low
+
+  * set response.timeout in cherrpy config to umc/http/session/timeout
+    (Bug #35052)
+
+ -- Lukas Walter <walter@univention.de>  Tue, 08 Jul 2014 12:46:09 +0200
+
+univention-management-console-frontend (3.0.152-36) unstable; urgency=low
+
+  * Bug #34243: only show reload-UMC message once; fix setting of category
+  	name
+
+ -- Florian Best <best@univention.de>  Thu, 03 Jul 2014 15:21:32 +0200
+
+univention-management-console-frontend (3.0.152-35) unstable; urgency=low
+
+  * fixed quoting in web server join script (Bug #33615)
+
+ -- Lukas Walter <walter@univention.de>  Wed, 02 Jul 2014 17:31:09 +0200
+
+univention-management-console-frontend (3.0.152-34) unstable; urgency=low
+
+  * Bug #34317: Adapted the default link on UCS overview page.
+
+ -- Alexander Kramer <kramer@univention.de>  Mon, 23 Jun 2014 09:44:53 +0200
+
+univention-management-console-frontend (3.0.152-33) unstable; urgency=low
+
+  * when newly installed on systems which are neither master nor backup
+    use a description for the UMC in the UCS overview page which does
+    no relate to the domain (Bug #33615)
+
+ -- Lukas Walter <walter@univention.de>  Fri, 20 Jun 2014 13:50:03 +0200
+
 univention-management-console-frontend (3.0.152-32) unstable; urgency=low
 
   * Bug #34243: fix error when reloading modules if new categories exists
