--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (4.0.0-1) unstable; urgency=low
+
+  * Bug #35145: Start UCS 4.0 development
+
+ -- Florian Best <best@univention.de>  Mon, 14 Jul 2014 10:23:42 +0200
+
 univention-management-console-frontend (3.0.152-38) unstable; urgency=low
 
   * Bug #34243: only show reload-UMC message once
