* Bug #35145: Start UCS 4.0 development
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51768 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-adtakeover/debian/changelog
+++ b/management/univention-management-console-module-adtakeover/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-adtakeover (2.0.0-1) unstable; urgency=low
+
+  * Bug #35145: Start UCS 4.0 development
+
+ -- Florian Best <best@univention.de>  Mon, 14 Jul 2014 10:32:00 +0200
+
 univention-management-console-module-adtakeover (1.0.10-26) unstable; urgency=medium
 
   * Move fix_gpo_container_names code to fix_sysvol_acls (Bug #34776)
