--- a/management/univention-management-console-module-appcenter/debian/changelog
+++ b/management/univention-management-console-module-appcenter/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-appcenter (4.0.0-1) unstable; urgency=low
+
+  * Bug #35145: Start UCS 4.0 development
+
+ -- Florian Best <best@univention.de>  Mon, 14 Jul 2014 10:38:36 +0200
+
 univention-management-console-module-appcenter (3.0.51-23) unstable; urgency=low
 
   * Bug #35136: Escape ID and Version of an app for LDAP registration
