--- a/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
@@ -1,3 +1,9 @@
+univention-virtual-machine-manager-daemon (3.0.17-12) unstable; urgency=low
+
+  * Bug #35107: Fix handling of paused VMs.
+
+ -- Philipp Hahn <hahn@univention.de>  Mon, 14 Jul 2014 10:29:03 +0200
+
 univention-virtual-machine-manager-daemon (3.0.17-11) unstable; urgency=low
 
   * Bug #35122: Automatically update the UVMM grid view in an defined interval
