* 60_umc-system/41_umc-service-complete-domain-rejoin: test     complete rejoin (Bug #34624)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51789 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test (4.0.166-58) unstable; urgency=low
+
+  * 60_umc-system/41_umc-service-complete-domain-rejoin:
+    test complete rejoin (Bug #34624)
+
+ -- Dmitry Galkin <galkin@univention.de>  Mon, 14 Jul 2014 15:43:09 +0200
+
 ucs-test (4.0.166-57) unstable; urgency=low
 
   * 52_s4connector/023_concurrent_deletion_in_ad: skip test until Bug
