--- a/management/univention-management-console/debian/changelog
+++ b/management/univention-management-console/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console (6.0.24-21) unstable; urgency=low
+
+  * Bug #34243: fix typo
+
+ -- Florian Best <best@univention.de>  Mon, 14 Jul 2014 16:32:22 +0200
+
 univention-management-console (6.0.24-20) unstable; urgency=low
 
   * Bug #34243: fix typos in translation
