* Update to UCS 4.0 (Bug #35138)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51797 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-archive-key/debian/changelog
+++ b/base/univention-archive-key/debian/changelog
@@ -1,3 +1,9 @@
+univention-archive-key (5.0.0-1) unstable; urgency=low
+
+  * Update to UCS 4.0 (Bug #35138)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 15 Jul 2014 07:26:31 +0200
+
 univention-archive-key (4.0.0-4) unstable; urgency=low
 
   * Ship the archive signature key for the upcoming UCS 4.0 (Bug #35213)
