--- a/virtualization/univention-virtual-machine-manager-schema/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-schema/debian/changelog
@@ -1,3 +1,9 @@
+univention-virtual-machine-manager-schema (5.0.0-1) unstable; urgency=low
+
+  * Update to UCS 4.0 (Bug #35361)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 15 Jul 2014 10:43:34 +0200
+
 univention-virtual-machine-manager-schema (4.0.2-3) unstable; urgency=low
 
   * Add search_filter() for new UDM optimization (Bug #24774)
