fixed join script (Bug #35095)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51837 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-samba/debian/changelog
+++ b/services/univention-samba/debian/changelog
@@ -1,3 +1,9 @@
+univention-samba (8.0.19-2) unstable; urgency=low
+
+  * fixed join script (Bug #35095) 
+
+ -- Felix Botner <botner@univention.de>  Tue, 15 Jul 2014 14:54:07 +0200
+
 univention-samba (8.0.19-1) unstable; urgency=low
 
   * added univention-samba-ad-member (Bug #35095)
