* Bug #34484: [WIP] Integration of new appliance wizard
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51842 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (7.0.69-11) unstable; urgency=medium
+
+  * Bug #34484: [WIP] Integration of new appliance wizard
+
+ -- Alexander Kläser <klaeser@univention.de>  Tue, 15 Jul 2014 16:07:57 +0200
+
 univention-system-setup (7.0.69-10) unstable; urgency=low
 
   * Added welcome page with instructions to set a root password
