--- a/base/univention-dvd/debian/changelog
+++ b/base/univention-dvd/debian/changelog
@@ -1,3 +1,9 @@
+univention-dvd (0.2.0-1) unstable; urgency=low
+
+  * Bug #30547: added linux kernel to task file
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Tue, 15 Jul 2014 16:24:17 +0200
+
 univention-dvd (0.1.0-1) unstable; urgency=low
 
   * Bug #30547: added patched version of make_disc_trees.pl which
