* Bug #35145: Start UCS 4.0 development
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51855 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-system-info/debian/changelog
+++ b/management/univention-system-info/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-info (5.0.0-1) unstable; urgency=low
+
+  * Bug #35145: Start UCS 4.0 development
+
+ -- Florian Best <best@univention.de>  Wed, 16 Jul 2014 11:24:02 +0200
+
 univention-system-info (4.0.4-1) unstable; urgency=low
 
   * revised UMC module description (Bug #32022)
