--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (3.0.152-40) unstable; urgency=medium
+
+  * Bug #34484: fixed class name of RadioButton
+
+ -- Alexander Kläser <klaeser@univention.de>  Wed, 16 Jul 2014 12:21:25 +0200
+
 univention-management-console-frontend (3.0.152-39) unstable; urgency=medium
 
   Bug #34484:
